Bug 941462 - Reply internal error code when getting I/O error from BlueZ, r=gyeh